force-app/main/default/objects/Member_Login_History__c/Member_Login_History__c.object-meta.xml
<CustomObject>
    <label>Member Login History</label>
    <nameField>
        <displayFormat>LOGIN-{00000000}</displayFormat>
        <label>Member Login History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Login History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>