force-app/main/default/objects/Member_Login_History__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Member Login History</relationshipLabel>
    <relationshipName>Member_Login_History</relationshipName>
    <type>Lookup</type>
</CustomField>