force-app/main/default/objects/Member_Login_History__c/fields/Last_Processed_SYSLog__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_SYSLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Processed SYSLog</label>
    <referenceTo>SYS_IntegrationLog__c</referenceTo>
    <relationshipLabel>Member Login History</relationshipLabel>
    <relationshipName>Member_Login_History</relationshipName>
    <type>Lookup</type>
</CustomField>