force-app/main/default/objects/Member_Login_History__c/fields/Login_Method__c.field-meta.xml
<CustomField>
    <fullName>Login_Method__c</fullName>
    <label>Login Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verification Pin</fullName>
            </value>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>Phone Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>