force-app/main/default/objects/Member_Login_History__c/fields/Login_Time__c.field-meta.xml
<CustomField>
    <fullName>Login_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Login Time</label>
    <type>DateTime</type>
</CustomField>