force-app/main/default/objects/Member_Login_History__c/fields/Login_Type__c.field-meta.xml
<CustomField>
    <fullName>Login_Type__c</fullName>
    <label>Login Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Website Chat</fullName>
            </value>
            <value>
                <fullName>Text Message</fullName>
            </value>
            <value>
                <fullName>Custom Wizard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>