force-app/main/default/objects/Member_Login_History__c/fields/Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Login_URL__c</fullName>
    <label>Login URL</label>
    <type>TextArea</type>
</CustomField>