force-app/main/default/objects/Member_Login_History__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Invalid Date of Birth</fullName>
            </value>
            <value>
                <fullName>Invalid Password</fullName>
            </value>
            <value>
                <fullName>Failed: Apex Error</fullName>
            </value>
            <value>
                <fullName>Failed: External System Error</fullName>
            </value>
            <value>
                <fullName>Failed: Unknown Error</fullName>
            </value>
            <value>
                <fullName>Invalid Verification Pin</fullName>
            </value>
            <value>
                <fullName>Verification Pin Sent</fullName>
            </value>
            <value>
                <fullName>Verification Pin Resent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>